UnshardCollection failover after persisting decision may cause premature DDL lock release

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • ClusterScalability 19Jan-2Feb, ClusterScalability 2Feb-16Feb
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A primary shard failover during unshardCollection after the commit decision is persisted can cause DDL locks to be released prematurely, allowing concurrent DDL operations to interfere with resharding cleanup.

      More details here

      The authoritative configsvr should handle conflicts or joins for existing resharding operations. Update the reshardCollectionCoordinator to forward the _configsvrReshardCollection command to the config server and let it handle the case, instead of having unshardCollection take the early return path.

            Assignee:
            Kruti Shah
            Reporter:
            Kruti Shah
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: