SERVER-117340 Prevent premature DDL lock release during unshardCollection after failover (#47387)

GitOrigin-RevId: 0a3ef0fbebaf4fbbe768253e20d5eb8273b3b6fc